# space_manipulator

./: README  active_debris.perspective  collision.perspective  joystick.perspective  joystick.perspective.7z  joystick_setup.sh  test_gazebo.perspective
active_debris_control/: CMakeLists.txt  Makefile  Sample Readme.txt  package.xml
active_debris_control/bagfiles/: #init.sh#  init.sh  playback.sh
active_debris_control/devel/: ModelStateControl.sh  init.sh  startup.sh
active_debris_control/launch/: gazebo.launch
active_debris_control/launch/includes/: space_set.launch.xml  target.launch.xml
active_debris_control/models/earth/: earth.SDF  model.config
active_debris_control/models/earth/materials/scripts/: space.material
active_debris_control/msg/: StampedDepths.msg
active_debris_control/perspectives/: 1.perspective  chaser.perspective
active_debris_control/plots/: force_f3d.csv
active_debris_control/scripts/: .contact_force_sub.py.swp  contact_data_sub.py  relative_vel.py
active_debris_control/src/: .pub_for_space_robot.py.swp
active_debris_control/worlds/: space.world
chaser_bringup/: CMakeLists.txt  package.xml
chaser_bringup/launch/: chaser.bringup.launch
chaser_bringup/worlds/: SkyX.material  space.world
chaser_control/: CMakeLists.txt  package.xml
chaser_control/config/: chaser_arm_control.yaml  chaser_joint_state.yaml
chaser_control/include/chaser_control/: gazebo_joints_PID.h  gazebo_ros_3D_thruster.h  gazebo_ros_bumper_flag.h  gazebo_ros_bumper_flag.org.h  gazebo_ros_f3d.h  pid_controller.h
chaser_control/include/chaser_control/org/: gazebo_joints_PID.org.h  gazebo_ros_3D_thruster(no joystick).h  gazebo_ros_3D_thruster.org.h
chaser_control/launch/: chaser_arm_controller.launch.xml  chaser_joint_state_controller.launch.xml  chaser_teleop.launch.xml
chaser_control/src/: compliant_wrist.cc  gazebo_joints_PID.cpp  gazebo_ros_3D_thruster.cc  gazebo_ros_bumper_flag.cpp  gazebo_ros_bumper_flag.org.cpp  gazebo_ros_f3d.cpp  pid_controller.cpp
chaser_control/src/org/: gazebo_joints_PID.org.cpp  gazebo_joints_PID.org2.cpp  gazebo_ros_3D_thruster (no_joystick).cc  gazebo_ros_3D_thruster.org.cc
chaser_description/: CMakeLists.txt  package.xml
chaser_description/launch/: chaser.gazebo.launch.xml  chaser.rviz.launch
chaser_description/models/robot1.0/meshes/: .directory  arm0.dae  arm0_col.STL  arm1.STL  arm1.dae  arm1_1.STL  arm1_1.dae  arm1_1_col.STL  arm1_col.STL  arm2.dae  arm2_1.dae  arm2_1_col.STL  arm2_col.STL  arm3.STL  arm3.dae  arm3_1.dae  arm3_col.STL  base.STL  base_col.STL  camera.dae  hand.dae  hand_col.STL
chaser_description/urdf/: .chaser_create.urdf.xacro.swp  chaser.create.urdf.xacro  chaser.gazebo.joints.xacro  chaser.gazebo.jointsPID.xacro  chaser.gazebo.links.xacro  chaser.gazebo.sensors.camera.xacro  chaser.gazebo.sensors.contact.xacro  chaser.gazebo.sensors.f3d.xacro  chaser.gazebo.sensors.ft_sensor.xacro  chaser.gazebo.sensors.imu.xacro  chaser.gazebo.sensors.p3d.xacro  chaser.gazebo.spd.xacro  chaser.gazebo.thrusters.xacro  chaser.gazebo.xacro  chaser.gv  chaser.urdf  chaser.urdf.base.xacro  chaser.urdf.camera.xacro  chaser.urdf.joints.org.xacro  chaser.urdf.joints.transmission.xacro  chaser.urdf.joints.xacro  chaser.urdf.links.xacro  model.config
manual/: gazebo_manual.aux  gazebo_manual.out  gazebo_manual.tex
spacedyn_integration/: CMakeLists.txt  SPACEDYN_LOOP.txt  package.xml
spacedyn_integration/config/: model.org.def  model_chaser.def  model_target.def
spacedyn_integration/include/spacedyn_integration/: chaser_controller.h  datadefine.h  dataext.h  dataflag.h  target_parser.h
spacedyn_integration/src/: chaser_controller.cpp  chaser_load.cpp  chaser_mapper.cpp  dataext.cpp  dataflag.cpp  impulse_controller.cpp  target_load.cpp  target_mapper.cpp  target_parser.cpp
spacedyn_ros/: CMakeLists.txt  functions_jacob.txt  package.xml
spacedyn_ros/config/model_sample/: DEOS.def
spacedyn_ros/include/spacedyn_ros/matrix/: matrix.h  vector.h
spacedyn_ros/include/spacedyn_ros/spd/: common.h  model.h  rot.h  rot_a.h  spd.h  spd.h.bak  spd_m.h  spd_m.h.bak  spd_o.h  spn.h  vModel.h
spacedyn_ros/src/matrix/: matrix.cpp  matrix_Boost.cpp  matrix_dt.cpp  test1.cpp  vector.cpp
spacedyn_ros/src/spd/: aw.cpp  calc_C.cpp  calc_CLC.cpp  calc_CLC2.cpp  calc_GH.cpp  calc_GJb.cpp  calc_GJe.cpp  calc_GJe_r.cpp  calc_Gc.cpp  calc_JJ.cpp  calc_Jb.cpp  calc_Je.cpp  calc_L.cpp  calc_L.cpp.bak  calc_L0.cpp  calc_Lg.cpp  calc_Rg.cpp  calc_SP.cpp  calc_SPN.cpp  calc_SS.cpp  calc_Xup_I.cpp  calc_dxgh.cpp  calc_hh.cpp  calc_tdxghI.cpp  calc_tdxhr.cpp  ch_conf.cpp  dat_consistency.cpp  f_dyn.cpp  f_dyn_CL.cpp  f_dyn_ffg.cpp  f_dyn_fix.cpp  f_dyn_rk.cpp  f_dyn_rk1.cpp  f_dyn_rk_ffg.cpp  f_kin_e.cpp  f_kin_j.cpp  gravity.cpp  i_dyn.cpp  i_dyn_CL.cpp  i_dyn_fix.cpp  (+10 more)
spacedyn_ros/src/spn/: main.cpp  rot.cpp  spn.cpp
target_description/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
target_description/include/target_description/: gazebo_target_m.h
target_description/launch/: display.launch
target_description/lib/: alwaysenable.cc
target_description/meshes/: target_col.STL  target_vis.STL  target_vis.dae
target_description/src/: gazebo_target_m.cpp
target_description/urdf/: model.config  target.urdf  target.urdf.xacro
tohoku_space_manipulator/: CMakeLists.txt  package.xml
