<?xml version="1.0"?>
<package>
  <name>chaser_bringup</name>
  <version>0.0.0</version>
  <description>The chaser_bringup package</description>
  <maintainer email="jacob.hernandezsanchez@pfl.ch">jacob</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
  
</package>
