<?xml version="1.0"?>
<package>
  <name>chaser_control</name>
  <version>0.0.0</version>
  <description>The chaser_control package</description>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>controller_manager_tests</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>spacedyn_ros</build_depend>
  <build_depend>spacedyn_integration</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>controller_manager_tests</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>spacedyn_ros</run_depend>
  <run_depend>spacedyn_integration</run_depend>
  <export>
	  	<gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
