<?xml version="1.0"?>
<package>
  <name>spacedyn_integration</name>
  <version>0.0.0</version>
  <description>Matrix</description>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>spacedyn_ros</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>spacedyn_ros</run_depend>
  <run_depend>roslib</run_depend>
  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
