<?xml version="1.0"?>
<package>
  <name>target_description</name>
  <version>0.0.0</version>
  <description>The target_description package</description>
  <maintainer email="jacob@todo.todo">jacob</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>spacedyn_integration</build_depend>
  <build_depend>spacedyn_ros</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>spacedyn_ros</run_depend>
  <run_depend>spacedyn_integration</run_depend>


  <export>
	   <gazebo_ros gazebo_model_path="${prefix}/models"/>
	   <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
